--- a/src/app/pages/catalog/catalog.template.html
+++ b/src/app/pages/catalog/catalog.template.html
@@ -1,3 +1,3 @@
 <div class="catalog catalog-wrapper">
-    <louis-c-watch-watch-list></louis-c-watch-watch-list>
+    <louis-c-watch-watch-list [showPreloader]="true"></louis-c-watch-watch-list>
 </div>
