--- a/src/app/components/watch/watch.template.html
+++ b/src/app/components/watch/watch.template.html
@@ -1,4 +1,4 @@
-<div class="card card-watch">
+<div [ngClass]="extraClasses" class="card l-card l-card-inline">
     <h3 class="card-watch__title title"><a href="{{watch.id}}">{{watch.name}}</a></h3>
     <div class="card-watch__content text-center">
         <div class="card-watch__links social-line">
