--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-transparent" color-on-scroll="500">
     <div class="container">
         <div class="navbar-translate">
-            <a class="navbar-brand" href="#">Louis XVI - Украина</a>
+            <a class="navbar-brand" [routerLink]="'/'">Louis XVI - Украина</a>
             <button class="navbar-toggler navbar-burger" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" (click)="sidebarToggle()">
                 <span class="navbar-toggler-bar"></span>
                 <span class="navbar-toggler-bar"></span>
@@ -11,19 +11,37 @@
         <div class="collapse navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/CreativeTim" target="_blank">
+                    <a
+                            class="nav-link"
+                            rel="tooltip"
+                            title="Follow us on Twitter"
+                            data-placement="bottom"
+                            [routerLink]="['/']"
+                            target="_blank">
                         <i class="fa fa-twitter"></i>
                         <p class="d-lg-none">Twitter</p>
                     </a>
                 </li>
                 <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/CreativeTim" target="_blank">
+                    <a
+                            class="nav-link"
+                            rel="tooltip"
+                            title="Like us on Facebook"
+                            data-placement="bottom"
+                            [routerLink]="['/']"
+                            target="_blank">
                         <i class="fa fa-facebook-square"></i>
                         <p class="d-lg-none">Facebook</p>
                     </a>
                 </li>
                 <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" href="https://www.instagram.com/CreativeTimOfficial" target="_blank">
+                    <a
+                            class="nav-link"
+                            rel="tooltip"
+                            title="Follow us on Instagram"
+                            data-placement="bottom"
+                            href="https://www.instagram.com/louis_xvi_ukraine/"
+                            target="_blank">
                         <i class="fa fa-instagram"></i>
                         <p class="d-lg-none">Instagram</p>
                     </a>
@@ -46,9 +64,12 @@
                     </a>
                     <!-- <a [routerLink]="['/home']" *ngIf="isDocumentation()" class="nav-link">Back to Kit</a> -->
                 </li>
-                <li class="nav-item" *ngIf="isDocumentation()">
-                    <a href="https://github.com/creativetimofficial/pk-free-angular/issues?ref=pk2-free-local" target="_blank" class="nav-link">Have an issue</a>
-                </li>
+                <!--<li class="nav-item" *ngIf="isDocumentation()">-->
+                    <!--<a -->
+                            <!--href="https://github.com/creativetimofficial/pk-free-angular/issues?ref=pk2-free-local" -->
+                            <!--target="_blank" -->
+                            <!--class="nav-link">Have an issue</a>-->
+                <!--</li>-->
             </ul>
         </div>
     </div>
