--- a/src/app/pages/watch/watch.template.html
+++ b/src/app/pages/watch/watch.template.html
@@ -11,7 +11,7 @@
                             class="img-circle img-no-padding img-responsive">
                 </div>
                 <div class="name">
-                    <h4 class="title">{{watch.name}}<br /></h4>
+                    <h4 class="title">{{watch.name}}<br/></h4>
                     <!--<h6 class="description">Music Producer</h6>-->
                 </div>
             </div>
@@ -41,8 +41,10 @@
                             </div>
                         </ng-template>
                     </div>
-                    <br />
-                    <button class="btn btn-outline-default btn-round">
+                    <br/>
+                    <button
+                            [routerLink]="['/order', watch.name]"
+                            class="btn btn-outline-default btn-round">
                         <i class="fa fa-shopping-bag"></i>
                         Купить
                     </button>
