-- fixed btn position on the small screen

--- a/src/app/pages/landing/keep-in-touch/keep-in-touch.template.html
+++ b/src/app/pages/landing/keep-in-touch/keep-in-touch.template.html
@@ -59,13 +59,13 @@
                     </textarea>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 mr-auto ml-auto">
+                    <div class="col-xs-6 mr-auto ml-auto">
                         <button
                                 (click)="onClean()"
                                 class="btn btn-secondary btn-lg btn-fill">Очистить
                         </button>
                     </div>
-                    <div class="col-md-4 mr-auto ml-auto">
+                    <div class="col-xs-6 mr-auto ml-auto">
                         <button
                                 type="submit"
                                 class="btn btn-danger btn-lg btn-fill">Отправить
