--- a/src/app/pages/authorization/sign-in/sign-in.template.html
+++ b/src/app/pages/authorization/sign-in/sign-in.template.html
@@ -9,13 +9,48 @@
 
                         <louis-p-c-authorization-social></louis-p-c-authorization-social>
 
-                        <form class="register-form">
-                            <label>Почта</label>
-                            <input type="text" class="form-control" placeholder="Почта">
+                        <form
+                                novalidate
+                                [formGroup]="form"
+                                (ngSubmit)="onSubmit()"
+                                class="register-form">
+
+                            <label>Логин</label>
+                            <input
+                                    formControlName="login"
+                                    type="text"
+                                    class="form-control"
+                                    placeholder="Почта\Ник\Номер телефона">
+                            <p
+                                    class="alert alert-danger"
+                                    *ngIf="form.controls.login.touched
+                                    && form.controls.login.hasError('required')">
+                                Введите логин
+                            </p>
 
                             <label>Пароль</label>
-                            <input type="password" class="form-control" placeholder="Пароль">
-                            <button class="btn btn-danger btn-block btn-round">Войти</button>
+                            <input
+                                    formControlName="password"
+                                    type="password"
+                                    class="form-control"
+                                    placeholder="Пароль">
+                            <p
+                                    class="alert alert-danger"
+                                    *ngIf="form.controls.password.touched
+                                    && form.controls.password.hasError('required')">
+                                Введите пароль
+                            </p>
+                            <p
+                                    class="alert alert-danger"
+                                    *ngIf="form.controls.password.touched
+                                    && form.controls.password.hasError('minlength')">
+                                Неправильный пароль
+                            </p>
+
+                            <button
+                                    [disabled]="!form.valid"
+                                    type="submit"
+                                    class="btn btn-danger btn-block btn-round">Войти</button>
                         </form>
                         <div class="forgot">
                             <a
@@ -25,7 +60,6 @@
                     </div>
                 </div>
             </div>
-
             <louis-p-c-authorization-footer></louis-p-c-authorization-footer>
         </div>
     </div>
