--feature/admin del functionality

--- a/src/app/components/watchList/watchList.template.html
+++ b/src/app/components/watchList/watchList.template.html
@@ -3,6 +3,7 @@
         class="watch-list">
     <ng-template ngFor let-watch [ngForOf]="watchList$ | async">
         <louis-watch
+                (watchTaped)="onWatchTap($event)"
                 [watch]="watch"
                 [extraClasses]="options?.extraClasses"></louis-watch>
     </ng-template>
