--fixed card watch component, added default card image

--- a/src/app/components/watch/watch.template.html
+++ b/src/app/components/watch/watch.template.html
@@ -15,9 +15,9 @@
                 <i class="fa fa-twitter"></i>
             </a>
         </div>
-        <div class="card-watch__image text-center">
+        <div class="l-card-watch__image text-center">
             <a [routerLink]="['/watch',watch.name]">
-                <img class="card-watch__image_img" src="{{mainImage}}" alt="{{watch.name}}"/>
+                <img class="l-card-watch__image_img" src="{{mainImage}}" alt="{{watch.name}}"/>
             </a>
         </div>
         <div class="card-watch__price">
