--- a/src/app/pages/home/index-view/index-view.template.html
+++ b/src/app/pages/home/index-view/index-view.template.html
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="title-brand">
                 <div class="angular-logo">
-                    <img src="assets/img/angular2-logo.png" alt="">
+                    <img src={{LOGO}} alt="">
                 </div>
                 <h1 class="presentation-title">Louis XVI</h1>
                 <div class="fog-low">
