--- a/src/app/pages/landing/about-us/about-us.template.html
+++ b/src/app/pages/landing/about-us/about-us.template.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2 class="title">Немного кто мы</h2>
+    <h2 class="title">О нас</h2>
     <div class="row">
         <div class="col-md-4">
             <div class="card card-profile card-plain">
