--- a/src/app/pages/watch/comments/watch-comments.template.html
+++ b/src/app/pages/watch/comments/watch-comments.template.html
@@ -50,7 +50,7 @@
             </ngb-tab>
             <ngb-tab title="Оставить комментарий">
                 <ng-template ngbTabContent>
-                    <h3 class="text-muted">Данный функционал в разрабоке. Просим прощения :(</h3>
+                    <h3 class="text-muted">Данный функционал в разрабоке.</h3>
                     <!--<br>-->
                     <!--<button class="btn btn-warning btn-round">-->
                         <!--Find artists-->
