--- a/src/app/components/watch/watch.template.html
+++ b/src/app/components/watch/watch.template.html
@@ -23,7 +23,7 @@
         <div class="card-watch__price">
             <div *ngIf="!(watch.discount && watch.discount !== 0); else newPrice">
                 <div class="card-watch__price_price d-inline-block">
-                    {{watch.price | priceShow:priceMap}}
+                    {{watch.price | transformPrice:priceMap}}
                 </div>
             </div>
             <ng-template #newPrice>
@@ -31,7 +31,7 @@
                     {{watch.price | currencyPrice:'UAH' | toFixed: 2}}
                 </div>
                 <div class="card-watch__price_price d-inline-block">
-                    {{watch.price | priceShow:priceMap }}
+                    {{watch.price | transformPrice:priceMap }}
                 </div>
             </ng-template>
         </div>
