--- a/src/app/pages/watch/watch.template.html
+++ b/src/app/pages/watch/watch.template.html
@@ -29,7 +29,7 @@
                         <h4>Цена</h4>
                         <div *ngIf="!(watch.discount && watch.discount !== 0); else newPrice">
                             <div class="card-watch__price_price d-inline-block">
-                                {{watch.price | priceShow:priceMap}}
+                                {{watch.price | transformPrice:priceMap}}
                             </div>
                         </div>
                         <ng-template #newPrice>
@@ -37,7 +37,7 @@
                                 {{watch.price | currencyPrice:'UAH' | toFixed: 2}}
                             </div>
                             <div class="card-watch__price_price d-inline-block">
-                                {{watch.price | priceShow:priceMap }}
+                                {{watch.price | transformPrice:priceMap }}
                             </div>
                         </ng-template>
                     </div>
