--work on pricePipe --keep fixing

--- a/src/app/components/loader/loader.style.scss
+++ b/src/app/components/loader/loader.style.scss
@@ -1,5 +1,5 @@
-@import "../../common/styles/variable";
-@import "../../common/styles/reusable";
+@import "../../shared/styles/variable";
+@import "../../shared/styles/reusable";
 
 .loader {
   
