--- a/src/app/components/watch/watch.template.html
+++ b/src/app/components/watch/watch.template.html
@@ -23,20 +23,20 @@
         <div class="card-watch__price">
             <div
                     louisPrice
-                    [price]="watch.price | transformPrice: priceMap"
+                    [price]="watch.price | transformPrice: priceMap | async"
                     [discount]="watch.discount">
             </div>
             <!--<div *ngIf="!(watch.discount && watch.discount !== 0); else newPrice">-->
             <!--<div class="card-watch__price_price d-inline-block">-->
-            <!--{{watch.price | transformPrice:priceMap}}-->
+            <!--{{watch.currencyResolver | transformPrice:priceMap}}-->
             <!--</div>-->
             <!--</div>-->
             <!--<ng-template #newPrice>-->
-            <!--<div class="d-inline-block card-watch__price_price-old l-price-old">-->
-            <!--{{watch.price | currencyPrice:'UAH' | toFixed: 2}}-->
+            <!--<div class="d-inline-block card-watch__price_price-old l-currencyResolver-old">-->
+            <!--{{watch.currencyResolver | currencyPrice:'UAH' | toFixed: 2}}-->
             <!--</div>-->
             <!--<div class="card-watch__price_price d-inline-block">-->
-            <!--{{watch.price | transformPrice:priceMap }}-->
+            <!--{{watch.currencyResolver | transformPrice:priceMap }}-->
             <!--</div>-->
             <!--</ng-template>-->
         </div>
