--work on pricePipe --keep going

--- a/src/app/pages/watch/watch.template.html
+++ b/src/app/pages/watch/watch.template.html
@@ -27,19 +27,20 @@
                     </div>
                     <div class="l-section watch-page__section">
                         <h4>Цена</h4>
-                        <div *ngIf="!(watch.discount && watch.discount !== 0); else newPrice">
-                            <div class="card-watch__price_price d-inline-block">
-                                {{watch.price | transformPrice:priceMap}}
-                            </div>
-                        </div>
-                        <ng-template #newPrice>
-                            <div class="d-inline-block card-watch__price_price-old l-price-old">
-                                {{watch.price | currencyPrice:'UAH' | toFixed: 2}}
-                            </div>
-                            <div class="card-watch__price_price d-inline-block">
-                                {{watch.price | transformPrice:priceMap }}
-                            </div>
-                        </ng-template>
+                        <!-- TODO: PRICEPIPE: Replace new logic -->
+                        <!--<div *ngIf="!(watch.discount && watch.discount !== 0); else newPrice">-->
+                            <!--<div class="card-watch__price_price d-inline-block">-->
+                                <!--{{watch.price | transformPrice:priceMap}}-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<ng-template #newPrice>-->
+                            <!--<div class="d-inline-block card-watch__price_price-old l-price-old">-->
+                                <!--{{watch.price | currencyPrice:'UAH' | toFixed: 2}}-->
+                            <!--</div>-->
+                            <!--<div class="card-watch__price_price d-inline-block">-->
+                                <!--{{watch.price | transformPrice:priceMap }}-->
+                            <!--</div>-->
+                        <!--</ng-template>-->
                     </div>
                     <br/>
                     <button
