--work on pricePipe --almost done --need to update ts to, at least, 2.4 version

--- a/src/app/components/watch/watch.template.html
+++ b/src/app/components/watch/watch.template.html
@@ -23,8 +23,8 @@
         <div class="card-watch__price">
             <div
                     louisPrice
-                    [price]="watch.price | transformPrice: priceMap"
-                    [discount]="watch.discount">
+                    [discount]="watch.discount"
+                    [price]="watch.price">
             </div>
             <!--<div *ngIf="!(watch.discount && watch.discount !== 0); else newPrice">-->
             <!--<div class="card-watch__price_price d-inline-block">-->
