--update --WORKED --FROM Angular4 and round frameworks, RxJs5 --TO Angular 6, RxJs 6 --DELETED E2E tests

--- a/src/app/ui/slider/slider.template.html
+++ b/src/app/ui/slider/slider.template.html
@@ -5,8 +5,8 @@
         [max]="max"
         [min]="min"
         [step]="step"
-        [thumb-label]="thumbLabel"
-        [tick-interval]="tickInterval"
+        [thumbLabel]="thumbLabel"
+        [tickInterval]="tickInterval"
         [(ngModel)]="value"
         (change)="onValueChanged(value)"
         [vertical]="vertical">
