--- a/src/app/pages/authentication/sign-up/sign-up.template.html
+++ b/src/app/pages/authentication/sign-up/sign-up.template.html
@@ -55,9 +55,9 @@
                                     class="form-control"
                                     placeholder="Повторите пароль">
                             <p
-                                    class="alert alert-danger"
-                                    *ngIf="form.submitted
-                                    && form.controls.confirmPassword.hasError('required')">
+                                    class="alert alert-danger">
+                                <!--*ngIf="form.submitted--> <!-- TODO: Invistigate form.submitted field -->
+                                && form.controls.confirmPassword.hasError('required')">
                                 Повторите пароль
                             </p>
                             <p
@@ -70,7 +70,8 @@
                             <button
                                     [disabled]="!form.valid"
                                     type="submit"
-                                    class="btn btn-danger btn-block btn-round">Зарегистрироваться</button>
+                                    class="btn btn-danger btn-block btn-round">Зарегистрироваться
+                            </button>
                         </form>
 
                         <div class="forgot">
