--update --WORKED --fixed webpack .map error

--- a/src/app/pages/home/index-view/index-view.template.html
+++ b/src/app/pages/home/index-view/index-view.template.html
@@ -3,9 +3,10 @@
     <div class="content-center">
         <div class="container">
             <div class="title-brand">
-                <div class="angular-logo">
-                    <img src={{LOGO}} alt="">
-                </div>
+                <!-- TODO: Insert logo here -->
+                <!--<div class="angular-logo">-->
+                    <!--<img src={{LOGO}} alt="">-->
+                <!--</div>-->
                 <h1 class="presentation-title">Louis XVI</h1>
                 <div class="fog-low">
                     <img src="assets/img/fog-low.png" alt="">
