--- a/src/app/components/price/withoutDiscount/priceWithoutDiscount.template.html
+++ b/src/app/components/price/withoutDiscount/priceWithoutDiscount.template.html
@@ -1,5 +1,5 @@
-<div>
+<div class="l-price">
     <div class="d-inline-block">
-        {{price}}
+        {{price | currencySign | async }}
     </div>
 </div>
