--- a/src/app/components/price/withDiscount/priceWithDiscount.template.html
+++ b/src/app/components/price/withDiscount/priceWithDiscount.template.html
@@ -1,8 +1,8 @@
-<div>
+<div class="l-price">
     <div class="d-inline-block l-price-old">
         {{price}}
     </div>
     <div class="d-inline-block">
-        {{newPrice}}
+        {{newPrice | currencySign | async}}
     </div>
 </div>
