--update --Fix: admin load image; watchList in-line; modal added; order move to component; styles fix

--- a/src/app/components/watch/watch.template.html
+++ b/src/app/components/watch/watch.template.html
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div class="card-watch__footer">
-        <a [routerLink]="['/order', watch.name]" class="btn btn-link btn-success">Оформить</a>
+        <a [routerLink]="['/watch', watch.name, 'order']" class="btn btn-link btn-success">Оформить</a>
         <a [routerLink]="['/watch', watch.name]" class="btn btn-link btn-info">Детальней</a>
     </div>
 </div>
