--- a/src/app/pages/watch/watch.style.scss
+++ b/src/app/pages/watch/watch.style.scss
@@ -6,3 +6,9 @@
     margin: 5px;
   }
 }
+
+.wantToBuy {
+  background-color: #66615B;
+  color: rgba(255, 255, 255, 0.8);
+  border-color: #66615B;
+}
