--little assets/img fixes

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -11,7 +11,7 @@
             <div class="credits ml-auto">
                 <span class="copyright">
                     © 2016 - {{date | date: 'yyyy'}}, сделано с <i class="fa fa-heart heart"></i>
-                    <a href="https://github.com/danbilokha" target="_blank">kaizen</a>
+                    <!--<a href="https://github.com/danbilokha" target="_blank">kaizen</a>-->
                 </span>
             </div>
         </div>
