--- a/src/app/components/comment/comment.template.html
+++ b/src/app/components/comment/comment.template.html
@@ -9,7 +9,7 @@
                                 <!--<li>-->
                                     <!--<div class="row">-->
                                         <!--<div class="col-md-2 col-sm-2 ml-auto mr-auto">-->
-                                            <!--<img src="../assets/img/faces/clem-onojeghuo-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">-->
+                                            <!--<img src="assets/img/faces/clem-onojeghuo-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">-->
                                         <!--</div>-->
                                         <!--<div class="col-md-7 col-sm-4 ml-auto">-->
                                             <!--<h6>Flume<br/><small>Musical Producer</small></h6>-->
@@ -28,7 +28,7 @@
                                 <!--<li>-->
                                     <!--<div class="row">-->
                                         <!--<div class="col-md-2 col-sm-2 ml-auto mr-auto">-->
-                                            <!--<img src="../assets/img/faces/ayo-ogunseinde-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">-->
+                                            <!--<img src="assets/img/faces/ayo-ogunseinde-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">-->
                                         <!--</div>-->
                                         <!--<div class="col-md-7 col-sm-4 ml-auto">-->
                                             <!--<h6>Banks<br /><small>Singer</small></h6>-->
