--- a/src/app/pages/catalog/catalog.template.html
+++ b/src/app/pages/catalog/catalog.template.html
@@ -1,4 +1,4 @@
-<louis-c-header [backgroundImage]="'../assets/img/test.jpg'"></louis-c-header>
+<louis-c-header [backgroundImage]="'assets/img/test.jpg'"></louis-c-header>
 <div class="spec-catalog-wrapper">
     <louis-component-watch-watch-list
             [showPreloader]="true"
