--- a/src/app/pages/landing/about-us/about-us.template.html
+++ b/src/app/pages/landing/about-us/about-us.template.html
@@ -4,7 +4,7 @@
         <div class="col-md-4">
             <div class="card card-profile card-plain">
                 <div class="card-avatar">
-                    <a href="#avatar"><img src="../assets/img/faces/clem-onojeghuo-3.jpg" alt="..."></a>
+                    <a href="#avatar"><img src="assets/img/faces/clem-onojeghuo-3.jpg" alt="..."></a>
                 </div>
                 <div class="card-block">
                     <a href="#paper-kit">
@@ -30,7 +30,7 @@
         <div class="col-md-4">
             <div class="card card-profile card-plain">
                 <div class="card-avatar">
-                    <a href="#avatar"><img src="../assets/img/faces/joe-gardner-2.jpg" alt="..."></a>
+                    <a href="#avatar"><img src="assets/img/faces/joe-gardner-2.jpg" alt="..."></a>
                 </div>
                 <div class="card-block">
                     <a href="#paper-kit">
@@ -54,7 +54,7 @@
         <div class="col-md-4">
             <div class="card card-profile card-plain">
                 <div class="card-avatar">
-                    <a href="#avatar"><img src="../assets/img/faces/erik-lucatero-2.jpg" alt="..."></a>
+                    <a href="#avatar"><img src="assets/img/faces/erik-lucatero-2.jpg" alt="..."></a>
                 </div>
                 <div class="card-block">
                     <a href="#paper-kit">
