--fix currency service

--- a/src/app/components/watch/watch.template.html
+++ b/src/app/components/watch/watch.template.html
@@ -24,6 +24,7 @@
             <div
                     louisPrice
                     [discount]="watch.discount"
+                    [currency]="watch.currency"
                     [price]="watch.price">
             </div>
         </div>
