--- a/src/app/pages/watch/watch.template.html
+++ b/src/app/pages/watch/watch.template.html
@@ -29,6 +29,7 @@
                         <div
                                 louisPrice
                                 [discount]="watch.discount"
+                                [currency]="watch.currency"
                                 [price]="watch.price">
                         </div>
                     </div>
