--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,8 +4,9 @@
             <nav class="footer-nav">
                 <ul>
                     <!-- <li><a href="https://github.com/danbilokha">danbilokha</a></li> -->
-                    <li><a href="#" target="_blank">Лента</a></li>
+                    <li><a href="#" target="_blank">Пользовательское соглашение</a></li>
                     <li><a href="#" target="_blank">Контакты</a></li>
+                    <li><a href="#" target="_blank">FAQ</a></li>
                 </ul>
             </nav>
             <div class="credits ml-auto">
